# robodog

./: .gitignore  Cargo.toml  README.md  build.rs  flash_files  memory.x  rust-toolchain.toml
bruno/robodog/: bruno.json  calibrate.bru  home.bru  set pos.bru
firmware/: README.md
src/: macros.rs  main.rs
src/model/: ik.rs
src/net/: Network.rs  app.rs  network.rs
src/net/www/: calibrate.html  calibrate.js  index.css  index.html  index.js
src/peripheral/: cyw43.rs  led.rs  mod.rs  servo.rs
www/: calibrate.html  calibrate.js  index.css  index.html
