[package]
name = "robodog"
version = "0.1.0"
edition = "2024"
authors = ["Dav32_1 <64831818+Dav321@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[dependencies]
embassy-embedded-hal = { version = "0.3.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt-timestamp-uptime", "defmt"] }
embassy-rp = { version = "0.6.0", features = ["defmt", "rp2040", "time-driver", "critical-section-impl"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"

portable-atomic = { version = "1.11.1", features = ["critical-section"] }
fixed = "1.29.0"