[package]
name = "robodog"
version = "0.1.0"
edition = "2024"
authors = ["Dav32_1 <64831818+Dav321@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }
embassy-time = { version = "0.5.0", features = ["defmt-timestamp-uptime", "defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "rp235xa", "time-driver", "critical-section-impl", "rom-func-cache", "intrinsics", "rom-v2-intrinsics" ] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = ["defmt", "icmp", "multicast", "tcp", "udp", "raw", "dhcpv4-hostname", "proto-ipv4", "medium-ip", "medium-ethernet"] }

cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }
picoserve = { version = "0.16.0", features = ["defmt", "embassy"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"

portable-atomic = { version = "1.11.1", features = ["critical-section"] }
fixed = "1.29.0"
static_cell = "2.1.1"
heapless = "0.8.0"

libm = "0.2.15"

embedded-hal = "1.0.0"
embedded-io-async = "0.7.0"
log = "0.4.28"

[build-dependencies]
anyhow = "1.0.100"
probe-rs = "0.29.1"

[profile.dev.package."*"]
opt-level = 3